test/expected/declare_b-c89.out
declare x as bool
             ^
14: error: "bool": unsupported type in C
